--- a/ipotracker/templates/contact.htm
+++ b/ipotracker/templates/contact.htm
@@ -11,7 +11,7 @@
                 {% csrf_token %}
                 <h2>Contact Us</h2>
                 <div><label for="email3">Email Address</label>
-                    <input type="text" name="email" id="email3" pattern="[a-z0-9]+@[a-z0-9]+[.][a-z]+" placeholder="name@example.com"/><br>
+                    <input type="text" name="email" id="email3" pattern="[a-z0-9]+@[a-z0-9]+[.][a-z]+" placeholder="name@example.com" required/><br>
                 </div>
                 <div><label for="query-select">query-select</label>
                     <select id="query-select" name="qtype">
