--- a/ipotracker/templates/base.htm
+++ b/ipotracker/templates/base.htm
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
-    <script type="text/javascript" src="{% static 'js/form.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/formnew.js' %}"></script>
     <title>IPO-TRACKER</title>
 </head>
 
@@ -139,7 +139,7 @@
                     <label for="exampleInputPassword2">
                         <h2>Confirm Password</h2>
                     </label><br>
-                    <input type="password" id="exampleInputPassword2" name="password2">
+                    <input type="password" id="exampleInputPassword2" name="password2" required> 
                 </div>
                 <input type="submit" class="btn btn-primary" name="submit" value="Sign Up" onclick="signup()";>
             </form>
@@ -183,7 +183,7 @@
     {% for message in messages%}
     {{message}}
     {% endfor %}
-    <script>
+    <!-- <script>
         // Get the modal
 
         var modal1 = document.getElementById('id01');
@@ -194,7 +194,7 @@
                 modal1.style.display = "none";
             }
         }
-    </script>
+    </script> -->
 
 </body>
 
