--- a/ipotracker/templates/base.htm
+++ b/ipotracker/templates/base.htm
@@ -167,12 +167,12 @@
     <footer class="footer" > 
         <div class="container footer-wraper">
             <div class="social-media-links">
-                <a href="https://www.facebook.com/profile.php?id=100006101223294" target="_blank"><i
+                <a href=# target="_blank"><i
                         class="fab fa-facebook fa-3x"></i></a>
-                <a href="https://twitter.com/MeetPat82332235" target="_blank"><i class="fab fa-twitter fa-3x"></i></a>
-                <a href="https://www.instagram.com/patel_meet_1908/" target="_blank"><i
+                <a href=# target="_blank"><i class="fab fa-twitter fa-3x"></i></a>
+                <a href=# target="_blank"><i
                         class="fab fa-instagram fa-3x"></i></a>
-                <a href="https://www.linkedin.com/in/meet-patel-a048231a0/" target="_blank"><i
+                <a href=# target="_blank"><i
                         class="fab fa-linkedin fa-3x"></i></a>
             </div>
             <p>
@@ -183,18 +183,6 @@
     {% for message in messages%}
     {{message}}
     {% endfor %}
-    <!-- <script>
-        // Get the modal
-
-        var modal1 = document.getElementById('id01');
-
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function (event1) {
-            if (event1.target == modal1) {
-                modal1.style.display = "none";
-            }
-        }
-    </script> -->
 
 </body>
 
