--- a/ipotracker/templates/form.htm
+++ b/ipotracker/templates/form.htm
@@ -56,7 +56,7 @@
             <option>Indian</option>
             <option>Other</option>
         </select><br>
-        <button type="submit" class="btn btn-primary" onclick="return validate_form();">Apply For IPO</button>
+        <button type="submit" class="btn btn-primary" onclick="return validate_form();" onsubmit="formsubmitted();">Apply For IPO</button>
     </div>
 </form>
 {% endblock %}
